--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section class="container">
         <div class="section socials">
             <h2>Our Socials:</h2>
-            <p>X/Twitter</p>
+            <p><a href="https://x.com/babymayaonsol" target="_blank">X/Twitter</a></p>
             <p>Telegram</p>
         </div>
         <div class="section logo">
