--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Tokenomics Section -->
     <section id="token" class="tokenomics">
         <h1>Tokenomics</h1>
-        <div class="contract-address">CA: 25x9Av7ddPJQFVJy512VzzQ96A2Tqza22LfHTKC</div>
+        <div class="contract-address">CA: ---25x9Av7ddPJQFVJy512VzzQ96A2Tqza22LfHTKC---</div>
         <div class="info-box">
             <div class="info-item">
                 <span class="label">NAME:</span>
@@ -124,7 +124,7 @@
         <div class="section socials">
             <h2>Our Socials:</h2>
             <p><a href="https://x.com/babymayaonsol" target="_blank">X/Twitter</a></p>
-            <p>Telegram</p>
+            <p><a href="t.me/babymayaonsol" target="_blank">Telegram</a></p>
         </div>
         <div class="section logo">
             <h1>$BABYMAYA</h1>
