--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="section socials">
             <h2>Our Socials:</h2>
             <p><a href="https://x.com/babymayaonsol" target="_blank">X/Twitter</a></p>
-            <p><a href="t.me/babymayaonsol" target="_blank">Telegram</a></p>
+            <p><a href="https://t.me/babymayaonsol" target="_blank">Telegram</a></p>
         </div>
         <div class="section logo">
             <h1>$BABYMAYA</h1>
