--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Maya Token</title>
 
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
     <!-- Link to Google Fonts - Nerko One -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
