--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
         <h2>Join Us</h2>
         <p>You can join our community with the links below or follow us on social media for regular updates.</p>
         <div class="social-buttons">
-            <button>Telegram</button>
-            <button>Twitter/X</button>
+            <a href="https://t.me/babymayaonsol" target="_blank" rel="noopener noreferrer"><button>Telegram</button></a>
+            <a href="https://x.com/babymayaonsol" target="_blank"
+                rel="noopener noreferrer"><button>Twitter/X</button></a>
         </div>
         <!-- <img src="images/baby_maya3.png" alt="Baby Samoyed eating watermelon" class="baby-maya-img"> -->
     </section>
